@@ -1,0 +1,17 @@
+<?php
+
+//paypal library messages
+$lang['paypal_error']				= 'There was an error processing your payment through PayPal';
+$lang['paypal_desc']				= 'Using this method, you will be directed to the Paypal website to verify your payment. Once your payment is authorized, you will be directed back to our website and your order will be complete.';
+
+
+//paypal admin
+$lang['pp_username']				= 'Paypal Username';
+$lang['pp_password']				= 'Paypal Password';
+$lang['pp_key']						= 'Paypal API Signature';
+
+$lang['test_mode_label']			= 'Mode';
+$lang['test_mode']					= 'Test (Sandbox)';
+$lang['live_mode']					= 'Live (Production)';
+
+$lang['currency_label']				= 'USD, EUR, etc.';
